# focus

./: .eslintrc.yml  .gitignore  .gitmodules  DEVLOG.md  Makefile  README.md  angular.json  client.dockerfile  docker-compose.yml  focus.code-workspace  focusb.dockerfile  focusf.code-workspace  focusf.dockerfile  justfile  nginx.conf  package.json  server.dockerfile  tailwind.config.js  tsconfig.json
projects/browser/: .eslintrc.cjs  justfile  package.json  tsconfig.json
projects/browser/src/: index.html  main.css
projects/client/: .eslintignore  .eslintrc.cjs  Makefile  angular.json  justfile  package.json  tailwind.config.js
projects/client/src/: main.css  main.ts  test.ts
projects/desktop/: .gitignore  desktop.sln
projects/desktop/desktop/: desktop.vcxproj  desktop.vcxproj.filters  main.cpp
projects/focusb/: Makefile  orwynn_cfg.py  pyproject.toml  ruff.toml
projects/focusb/focusb/: __main__.py
projects/focusb/src/: __main__.py  idea.py  project.py  share.py  task.py  timing.py
projects/focusb/tests/: conftest.py  test_timing.py
projects/focusf/: .eslintignore  .eslintrc.cjs  .eslintrc.yml  Makefile  karma.conf.js  package.json  sample.env  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
projects/jskit/: package.json  tsconfig.json
projects/jsrxcat/: index.ts  msg.ts  package.json  tsconfig.json
projects/server/: Makefile  justfile  orwynn_cfg.py  pyproject.toml  ruff.toml
projects/server/src/: __main__.py  color.py  domain.py  idea.py  project.py  task.py  timing.py
projects/server/tests/: conftest.py
(+124 files in other folders)
